--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,33 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+  <div id="pagina"></div>
+    id="cabecalho">cabecalho</div>
+         <div
+         id="esquerda">esquerda</div>
+         <h1>Lista não ordenada</h1>
+        <ul class="menu">
+          /li>
+          <li>cafe</li>
+            <li>leite</li>
+            <li>cha</li>
+            <div id="centro">centro</div>
+                <h1>Lista ordenada</h1>
+                <ol>
+                    <li>animais</li>
+                    <li>abelha</li>
+                    <li>gato</li>
+        </ol>
+        <div id="direita">direita</div>
+        <div id="rodape">rodape</div>
+  </div>
+
+
+
+
+
+
+
+
 </body>
 </html>>
