--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
          <h1>Lista não ordenada</h1>
         <ul class="menu">
           /li>
-          <li>cafe</li>
+          <li>café</li>
             <li>leite</li>
             <li>cha</li>
             <div id="centro">centro</div>
